hphp/hack/test/typecheck/memoize/bad_class2.php.exp
File "bad_class2.php", line 6, characters 24-26:
This is an object of type Bar (Typing[4149])
File "bad_class2.php", line 6, characters 28-31:
Parameters to memoized function must be null, bool, int, float, string, an object deriving IMemoizeParam, or a Container thereof. See also http://docs.hhvm.com/hack/attributes/special#__memoize
