hphp/hack/test/typecheck/memoize/bad_class2.php
<?hh // strict

class Bar {}

<<__Memoize>>
function some_function(Bar $arg): string {
  return 'hello';
}
